refactor: Rewrite deprecated code
Replace deprecated constructors `new URL()` and `new Locale()` with updated equivalents