@@ -73,7 +73,7 @@ public class FastDateParser implements DateParser, Serializable {
      */
     private static final long serialVersionUID = 2L;
 
-    static final Locale JAPANESE_IMPERIAL = new Locale("ja", "JP", "JP");
+    static final Locale JAPANESE_IMPERIAL = Locale.of("ja", "JP", "JP");
 
     // defining fields
     private final String pattern;
